# peacock

./: .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  shell.nix
examples/: animation.rs  color_palette.rs  colors.rs  ecs.rs  game_context.rs  hello_world.rs  orcmark.rs  sprite_batching.rs  text.rs
examples/res/: README.md
src/: context.rs  ecs.rs  error.rs  fps_tracker.rs  game.rs  graphics.rs  input.rs  lib.rs  time.rs  vector2.rs  window.rs
src/ecs/: allocator.rs  entity.rs  entity_builder.rs  generation.rs  world.rs
src/game/: context.rs
src/graphics/: animation.rs  color.rs  context.rs  font.rs  image.rs  rectangle.rs  sprite_batch.rs  text.rs  texture.rs  texture_atlas.rs  view.rs
src/input/: mouse.rs
