[package]
name = "peacock"
version = "0.0.1"
description = "A game engine for making beautiful games."
repository = "https://github.com/maxdeviant/peacock"
documentation = "https://docs.rs/peacock/"
categories = ["game-engines"]
keywords = ["peacock", "game", "engine", "gamedev"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hashbrown = "0.1.8"
lazy_static = "1.0"
rand = "0.6.5"
sdl2 = { version = "0.32", features = ["image", "ttf", "unsafe_textures"] }
